--- a/index.html
+++ b/index.html
@@ -920,7 +920,7 @@
         <div class="visit-buttons">
             <button type="button" id="firstVisit" onclick="selectVisit(this)">ミニプラン　37,000円+税</button>
             <button type="button" id="repeatVisit" onclick="selectVisit(this)">スタンダードプラン　47,000円+税</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">プレミアムプラン　57,000円+税</button>
+            <button type="button" id="sanVisit" onclick="selectVisit(this)">プレミアムプラン　57,000円+税</button>
         </div>
 
             <div class="label">撮影内容（任意）</div>
@@ -1615,7 +1615,7 @@ function selectpreparationphoto(element) {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前\n・${formData.name}\n\n電話番号\n・${formData.phone}\n\nプラン\n・${formData.visitCount}\n\n撮影内容\n・${formData.Freshflowerphotography}${formData.ziyuusonota}\n\nお子様のお誕生日\n・${formatDate(formData.dates[3])}\n\nお子様のお名前\n・${formData.mugwortmainkid}\n\nお子様の性別\n・${formData.FreshflowerphotographyCount}\n\nご兄弟のお名前\n・${formData.mugwortsiblinginfo}\n\nご兄弟の性別\n・${formData.CaesareansectionCount}\n\nご兄弟の年齢\n・${formData.mugwortparticipants}\n\n撮影に参加される方\n・${formData.mugwortshrinename}\n\n生花撮影\n・${formData.kimonoCount}\n\nお支度\n・${formData.hairmakeupCount}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前\n・${formData.name}\n\n電話番号\n・${formData.phone}\n\nプラン\n・${formData.visitCount}\n\n撮影内容\n・${formData.FreshflowerphotographyCount}${formData.ziyuusonota}\n\nお子様のお誕生日\n・${formatDate(formData.dates[3])}\n\nお子様のお名前\n・${formData.mugwortmainkid}\n\nお子様の性別\n・${formData.FreshflowerphotographyCount}\n\nご兄弟のお名前\n・${formData.mugwortsiblinginfo}\n\nご兄弟の性別\n・${formData.CaesareansectionCount}\n\nご兄弟の年齢\n・${formData.mugwortparticipants}\n\n撮影に参加される方\n・${formData.mugwortshrinename}\n\n生花撮影\n・${formData.kimonoCount}\n\nお支度\n・${formData.hairmakeupCount}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
