--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
         .visit-buttons,
         .childsgender-buttons,
-        .Caesareansection-buttons,
+        .Brothersgender-buttons,
         .hairmakeup-buttons,
         .kimono-buttons,
         .preparationphoto-buttons,
@@ -204,7 +204,7 @@
 
         .visit-buttons button,
         .childsgender-buttons button,
-        .Caesareansection-buttons button,
+        .Brothersgender-buttons button,
         .hairmakeup-buttons button,
         .kimono-buttons button,
         .preparationphoto-buttons button,
@@ -226,7 +226,7 @@
 
         .visit-buttons button.active,
         .childsgender-buttons button.active,
-        .Caesareansection-buttons button.active,
+        .Brothersgender-buttons button.active,
         .hairmakeup-buttons button.active,
         .kimono-buttons button.active,
         .preparationphoto-buttons button.active,
@@ -1045,7 +1045,6 @@
         let childsgenderCount = '';
         let FreshflowerphotographyCount = '';
         let selectedMenu = '';
-        let CaesareansectionCount = '';
         let highschoolCount = '';
         let selectedSymptom = [];  // 配列として定義
         let selectedFullDate = '';
@@ -1213,21 +1212,6 @@
         }
 
         // 訪問回数の選択（初回・リピート）
-        function selectCaesareansection(element) {
-            document.querySelectorAll('.Caesareansection-buttons button').forEach(btn => btn.classList.remove('active'));
-            element.classList.add('active');
-            CaesareansectionCount = element.innerText;
-
-            // 選択された訪問回数に対応する時間を取得
-            selectedCaesareansectionTime = CaesareansectionTimes[CaesareansectionCount];
-
-            console.log('選択された訪問回数の時間:', selectedCaesareansectionTime);
-
-            // カレンダーを更新するために取得する日付を渡す
-            fetchAvailability(currentDate);
-        }
-
-        // 訪問回数の選択（初回・リピート）
         function selectpreparationphoto(element) {
             document.querySelectorAll('.preparationphoto-buttons button').forEach(btn => btn.classList.remove('active'));
             element.classList.add('active');
@@ -1339,7 +1323,7 @@
                 Businessaddress: document.getElementById('Businessaddress').value.trim(),
                 nameplate: document.getElementById('nameplate').value.trim(),
                 childsname: document.getElementById('childsname').value.trim(),
-                visitCount, hairmakeupCount, kimonoCount, preparationphotoCount, FreshflowerphotographyCount, childsgenderCount, CaesareansectionCount, BrothersgenderConut,
+                visitCount, hairmakeupCount, kimonoCount, preparationphotoCount, FreshflowerphotographyCount, childsgenderCount, BrothersgenderConut,
                 dates: [
                     document.getElementById('date1').value,
                     document.getElementById('date2').value,
