--- a/index.html
+++ b/index.html
@@ -1321,6 +1321,8 @@
                 phone: document.getElementById('phone').value.trim(),
                 birthweight: document.getElementById('birthweight').value.trim(),
                 Businessaddress: document.getElementById('Businessaddress').value.trim(),
+                Brothersname: document.getElementById('Brothersname').value.trim(),
+                Siblingsage: document.getElementById('Siblingsage').value.trim(),
                 nameplate: document.getElementById('nameplate').value.trim(),
                 childsname: document.getElementById('childsname').value.trim(),
                 visitCount, hairmakeupCount, kimonoCount, preparationphotoCount, FreshflowerphotographyCount, childsgenderCount, BrothersgenderConut,
