--- a/index.html
+++ b/index.html
@@ -1316,24 +1316,29 @@
 
         function submitForm() {
             const formData = {
-                name: document.getElementById('name').value.trim(),
-                Participateintheshooting: document.getElementById('Participateintheshooting').value.trim(),
-                phone: document.getElementById('phone').value.trim(),
-                birthweight: document.getElementById('birthweight').value.trim(),
-                Businessaddress: document.getElementById('Businessaddress').value.trim(),
-                Brothersname: document.getElementById('Brothersname').value.trim(),
-                Siblingsage: document.getElementById('Siblingsage').value.trim(),
-                nameplate: document.getElementById('nameplate').value.trim(),
-                childsname: document.getElementById('childsname').value.trim(),
-                visitCount, hairmakeupCount, kimonoCount, preparationphotoCount, FreshflowerphotographyCount, childsgenderCount, BrothersgenderConut,
-                dates: [
-                    document.getElementById('date1').value,
-                    document.getElementById('date2').value,
-                    document.getElementById('date3').value,
-                    document.getElementById('date4').value
-                ],
-                message: document.getElementById('message').value.trim()
-            };
+    name: document.getElementById('name').value.trim(),
+    phone: document.getElementById('phone').value.trim(),
+    birthweight: document.getElementById('birthweight').value.trim(),
+    Businessaddress: document.getElementById('Businessaddress').value.trim(),
+    nameplate: document.getElementById('nameplate').value.trim(),
+    childsname: document.getElementById('childsname').value.trim(),
+    Participateintheshooting: document.getElementById('Participateintheshooting').value.trim(),
+    Brothersname: document.getElementById('Brothersname').value.trim(), // ← 追加
+    Siblingsage: document.getElementById('Siblingsage').value.trim(),   // ← 追加
+    visitCount,
+    hairmakeupCount,
+    kimonoCount,
+    FreshflowerphotographyCount,
+    childsgenderCount,
+    BrothersgenderCount, // ← スペル修正
+    dates: [
+        document.getElementById('date1').value,
+        document.getElementById('date2').value,
+        document.getElementById('date3').value,
+        document.getElementById('date4').value
+    ],
+    message: document.getElementById('message').value.trim()
+};
 
             // フォームデータのチェック
             if (!formData.name) {
