--- a/index.html
+++ b/index.html
@@ -922,82 +922,21 @@
         <div class="label">お客様名<span class="required">必須</span></div>
         <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
 
+        <div class="label">ご住所<span class="required">必須</span></div>
+        <input type="text" id="Yourresidentialaddress" placeholder="ご住所を入力してください" oninput="saveInput('Yourresidentialaddress')">
+
         <div class="label">電話番号<span class="required">必須</span></div>
         <input type="tel" id="phone" placeholder="電話番号を入力してください" oninput="saveInput('phone')">
 
         <div class="label">プランをお選びください<span class="required">必須</span></div>
         <div class="visit-buttons">
-            <button type="button" id="firstVisit" onclick="selectVisit(this)">ミニプラン 　37,000円+税</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">スタンダードプラン 　50,000円+税</button>
-            <button type="button" id="sanVisit" onclick="selectVisit(this)">プレミアムプラン 　67,000円+税</button>
-            <button type="button" id="yonVisit" onclick="selectVisit(this)">赤ちゃんのいる暮らしプラン　37,000円+税</button>
+            <button type="button" id="firstVisit" onclick="selectVisit(this)">ロケーション撮影プラン 40,000円+税</button>
+            <button type="button" id="repeatVisit" onclick="selectVisit(this)">日々のくらしプラン 37,000円+税</button>
+            <button type="button" id="sanVisit" onclick="selectVisit(this)">その他の撮影</button>
         </div>
 
-        <div class="highlight-background">
-            <div class="kibounitizi">お子様のお誕生日（任意）</span></div>
-        </div>
-
-        <!-- カスタム placeholder 表示用 -->
-        <div class="datetime-wrapper" style="text-align: center;">
-            <span class="placeholder" id="placeholder4">⇩タップして日時を入力⇩</span>
-            <input type="datetime-local" id="date4" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
-        </div>
-
-        <div class="label">自然分娩 or 帝王切開（任意）</div>
-        <div class="Freshflowerphotography-buttons">
-            <button type="button" onclick="selectFreshflowerphotography(this)">自然分娩</button>
-            <button type="button" onclick="selectFreshflowerphotography(this)">帝王切開</button>
-        </div>
-
-        <div class="label">出張先住所※里帰りの場合や住所と出張先が異なる場合のみ記入</div>
-        <textarea id="Businessaddress" placeholder="出張先をご記入ください。"></textarea>
-
-        <div class="label">表札のお名前（任意）</div>
-        <textarea id="nameplate" placeholder="表札のお名前をご記入ください。"></textarea>
-
-        <div class="label">お子様のお名前※未定の場合は空白で大丈夫です（任意）</div>
-        <input type="text" id="childsname" placeholder="例：祖母2人、父、母 など">
-
-        <div class="label">お子様の性別（任意）</div>
-        <div class="childsgender-buttons">
-            <button type="button" onclick="selectchildsgender(this)">男性</button>
-            <button type="button" onclick="selectchildsgender(this)">女性</button>
-            <button type="button" onclick="selectchildsgender(this)">わからない</button>
-        </div>
-
-        <div class="label">出生体重<span class="required">必須</span></div>
-        <input type="tel" id="birthweight" placeholder="出生体重を入力してください">
-
-        <div class="label">ご兄弟のお名前（任意）</div>
-        <input type="text" id="Brothersname" placeholder="例：祖母2人、父、母 など">
-
-        <div class="label">ご兄弟の性別（任意）</div>
-        <div class="Brothersgender-buttons">
-            <button type="button" onclick="selectBrothersgender(this)">男性</button>
-            <button type="button" onclick="selectBrothersgender(this)">女性</button>
-        </div>
-
-        <div class="label">ご兄弟の年齢（任意）</div>
-        <input type="tel" id="Siblingsage" placeholder="例：祖母2人、父、母 など">
-
-        <div class="label">撮影に参加される方の人数と続柄（任意）</div>
-        <input type="text" id="Participateintheshooting" placeholder="撮影に参加される方の人数と続柄をご記入ください">
-
-        <div class="label">生花撮影ご希望の有無<span class="required">必須</span></div>
-        <div class="kimono-buttons">
-            <button type="button" onclick="selectkimono(this)">有り</button>
-            <button type="button" onclick="selectkimono(this)">無し</button>
-            <button type="button" onclick="selectkimono(this)">相談したい</button>
-        </div>
-
-        <div class="label">◎お支度ご希望の有無<span class="required">必須</span></div>
-        <div class="hairmakeup-buttons">
-            <button type="button" onclick="selecthairmakeup(this)">有り</button>
-            <button type="button" onclick="selecthairmakeup(this)">無し</button>
-            <button type="button" onclick="selecthairmakeup(this)">相談したい</button>
-        </div>
-
-
+        <div class="label">撮影内容<span class="required">必須</span></div>
+        <textarea id="Businessaddress" placeholder="撮影内容をご記入ください。"></textarea>
 
         <div class="highlight-background">
             <div class="kibounitizi">希望日時<span class="required">必須</span></div>
@@ -1076,9 +1015,11 @@
         // ページが読み込まれたときに前回の入力内容を復元
         document.addEventListener('DOMContentLoaded', function () {
             const savedName = localStorage.getItem('name');
+            const savedYourresidentialaddress = localStorage.getItem('Yourresidentialaddress');
             const savedPhone = localStorage.getItem('phone');
 
             if (savedName) document.getElementById('name').value = savedName;
+            if (savedYourresidentialaddress) document.getElementById('Yourresidentialaddress').value = savedYourresidentialaddress;
             if (savedPhone) document.getElementById('phone').value = savedPhone;
         });
 
@@ -1151,144 +1092,6 @@
             fetchAvailability(currentDate);
         }
 
-        // 訪問回数の選択（初回・リピート）
-        function selectchildsgender(element) {
-            document.querySelectorAll('.childsgender-buttons button').forEach(btn => btn.classList.remove('active'));
-            element.classList.add('active');
-            childsgenderCount = element.innerText;
-
-            // 選択された訪問回数に対応する時間を取得
-            selectedchildsgenderTime = childsgenderTimes[childsgenderCount];
-
-            console.log('選択された訪問回数の時間:', selectedchildsgenderTime);
-
-            // カレンダーを更新するために取得する日付を渡す
-            fetchAvailability(currentDate);
-        }
-
-        // 訪問回数の選択（初回・リピート）
-        function selectFreshflowerphotography(element) {
-            document.querySelectorAll('.Freshflowerphotography-buttons button').forEach(btn => btn.classList.remove('active'));
-            element.classList.add('active');
-            FreshflowerphotographyCount = element.innerText;
-
-            // 選択された訪問回数に対応する時間を取得
-            selectedFreshflowerphotographyTime = FreshflowerphotographyTimes[FreshflowerphotographyCount];
-
-            console.log('選択された訪問回数の時間:', selectedFreshflowerphotographyTime);
-
-            // カレンダーを更新するために取得する日付を渡す
-            fetchAvailability(currentDate);
-        }
-
-        // 訪問回数の選択（初回・リピート）
-        function selecthairmakeup(element) {
-            document.querySelectorAll('.hairmakeup-buttons button').forEach(btn => btn.classList.remove('active'));
-            element.classList.add('active');
-            hairmakeupCount = element.innerText;
-
-            // 選択された訪問回数に対応する時間を取得
-            selectedhairmakeupTime = hairmakeupTimes[hairmakeupCount];
-
-            console.log('選択された訪問回数の時間:', selectedhairmakeupTime);
-
-            // カレンダーを更新するために取得する日付を渡す
-            fetchAvailability(currentDate);
-        }
-
-        // 訪問回数の選択（初回・リピート）
-        function selectkimono(element) {
-            document.querySelectorAll('.kimono-buttons button').forEach(btn => btn.classList.remove('active'));
-            element.classList.add('active');
-            kimonoCount = element.innerText;
-
-            // 選択された訪問回数に対応する時間を取得
-            selectedkimonoTime = kimonoTimes[kimonoCount];
-
-            console.log('選択された訪問回数の時間:', selectedkimonoTime);
-
-            // カレンダーを更新するために取得する日付を渡す
-            fetchAvailability(currentDate);
-        }
-
-        // 訪問回数の選択（初回・リピート）
-        function selectpreparationphoto(element) {
-            document.querySelectorAll('.preparationphoto-buttons button').forEach(btn => btn.classList.remove('active'));
-            element.classList.add('active');
-            preparationphotoCount = element.innerText;
-
-            // 選択された訪問回数に対応する時間を取得
-            selectedpreparationphotoTime = preparationphotoTimes[preparationphotoCount];
-
-            console.log('選択された訪問回数の時間:', selectedpreparationphotoTime);
-
-            // カレンダーを更新するために取得する日付を渡す
-            fetchAvailability(currentDate);
-        }
-
-        function selecthighschool(element) {
-            // 選択された日時をリセット
-            selectedFullDate = '';
-
-            document.getElementById('firsthighschool').classList.remove('active');
-            document.getElementById('repeathighschool').classList.remove('active');
-            element.classList.add('active');
-            highschoolCount = element.innerText;
-
-            // 選択された訪問回数に対応する時間を取得
-            selectedhighschoolTime = highschoolTimes[highschoolCount];
-
-            console.log('選択された訪問回数の時間:', selectedhighschoolTime);
-
-            // カレンダーを更新するために取得する日付を渡す
-            fetchAvailability(currentDate);
-        }
-
-        function showMenu(menu) {
-            // すべてのメニューボタンの選択状態をリセット
-            document.querySelectorAll('.menu-sections button').forEach(button => {
-                button.classList.remove('active');
-            });
-
-            // 選択されたメニューの名前を取得
-            let selectedButton = document.querySelector(`.menu-sections button[onclick="showMenu('${menu}')"]`);
-            if (selectedButton) {
-                selectedMenu = selectedButton.innerText;
-            }
-
-            // すべてのメニューボタンの選択状態をリセット
-            document.querySelectorAll('.menu-sections button').forEach(button => {
-                button.classList.remove('active');
-            });
-
-            // 選択されたメニューセクションを表示
-            document.querySelectorAll('.menu-section').forEach(section => {
-                section.classList.remove('active');
-                section.querySelectorAll('button').forEach(btn => btn.classList.remove('active'));
-            });
-
-            // 対応するメニューボタンを選択状態にする
-            if (selectedButton) {
-                selectedButton.classList.add('active');
-            }
-
-            // 選択されたメニューセクションを表示
-            document.getElementById(menu).classList.add('active');
-
-            // `treatment-text` の内容をリセット
-            document.getElementById("treatment-text").innerHTML = "";
-
-            // メニューとオプションをリセット
-            selectedSymptom = '';      // メニューのリセット
-            irradiationsCount = '';    // オプションのリセット
-            menuPrice = 0;             // メニューの価格リセット
-            optionsPrice = 0;          // オプションの価格リセット
-            totalAmount = 0;           // 合計金額リセット
-
-            // 表示を更新
-            updateDisplayInfo();
-        }
-
         function selectDate(cell) {
             // "unavailable" クラスが付いている場合はクリックを無効化
             if (cell.classList.contains('unavailable')) {
@@ -1318,24 +1121,13 @@
             const formData = {
     name: document.getElementById('name').value.trim(),
     phone: document.getElementById('phone').value.trim(),
-    birthweight: document.getElementById('birthweight').value.trim(),
+    Yourresidentialaddress: document.getElementById('Yourresidentialaddress').value.trim(),
     Businessaddress: document.getElementById('Businessaddress').value.trim(),
-    nameplate: document.getElementById('nameplate').value.trim(),
-    childsname: document.getElementById('childsname').value.trim(),
-    Participateintheshooting: document.getElementById('Participateintheshooting').value.trim(),
-    Brothersname: document.getElementById('Brothersname').value.trim(), // ← 追加
-    Siblingsage: document.getElementById('Siblingsage').value.trim(),   // ← 追加
     visitCount,
-    hairmakeupCount,
-    kimonoCount,
-    FreshflowerphotographyCount,
-    childsgenderCount,
-    BrothersgenderCount, // ← スペル修正
     dates: [
         document.getElementById('date1').value,
         document.getElementById('date2').value,
-        document.getElementById('date3').value,
-        document.getElementById('date4').value
+        document.getElementById('date3').value
     ],
     message: document.getElementById('message').value.trim()
 };
@@ -1359,7 +1151,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前\n・${formData.name}\n\n電話番号\n・${formData.phone}\n\nプラン\n・${formData.visitCount}\n\n撮影内容\n・${formData.FreshflowerphotographyCount}\n\nお子様のお誕生日\n・${formatDate(formData.dates[3])}\n\n出張先住所\n・${formData.Businessaddress}\n\n表札のお名前\n・${formData.nameplate}\n\nお子様のお名前\n・${formData.childsname}\n\nお子様の性別\n・${formData.childsgenderCount}\n\n出生体重\n・${formData.birthweight}\n\nご兄弟のお名前\n・${formData.Brothersname}\n\nご兄弟の性別\n・${formData.BrothersgenderCount}\n\nご兄弟の年齢\n・${formData.Siblingsage}\n\n撮影に参加\n・${formData.Participateintheshooting}\n\n生花撮影\n・${formData.kimonoCount}\n\nお支度\n・${formData.hairmakeupCount}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\n【お名前】\n・${formData.name}\n\n【ご住所】\n・${formData.Yourresidentialaddress}\n\n【電話番号】\n・${formData.phone}\n\nプラン\n・${formData.visitCount}\n\n撮影内容\n・${formData.Businessaddress}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
