--- a/index.html
+++ b/index.html
@@ -917,7 +917,7 @@
     </div>
 
     <div class="container">
-        <h1>すずき写真事務所<br>出張 ニューボーンフォト
+        <h1>すずき写真事務所<br>出張撮影/その他の撮影
         </h1>
         <div class="label">お客様名<span class="required">必須</span></div>
         <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
@@ -1133,7 +1133,7 @@
 };
 
             // フォームデータのチェック
-            if (!formData.name) {
+            if (!formData.name) {〙
                 alert('お名前を入力してください。');
                 return;
             }
@@ -1151,7 +1151,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n【お名前】\n・${formData.name}\n\n【ご住所】\n・${formData.Yourresidentialaddress}\n\n【電話番号】\n・${formData.phone}\n\nプラン\n・${formData.visitCount}\n\n撮影内容\n・${formData.Businessaddress}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\n[お名前]\n・${formData.name}\n\n≪ご住所≫\n・${formData.Yourresidentialaddress}\n\n｟電話番号｠\n・${formData.phone}\n\nプラン\n・${formData.visitCount}\n\n撮影内容\n・${formData.Businessaddress}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
