--- a/index.html
+++ b/index.html
@@ -186,12 +186,6 @@
         }
 
         .visit-buttons,
-        .childsgender-buttons,
-        .Brothersgender-buttons,
-        .hairmakeup-buttons,
-        .kimono-buttons,
-        .preparationphoto-buttons,
-        .Freshflowerphotography-buttons,
         .highschool-buttons,
         .symptoms,
         .menu-sections,
@@ -203,13 +197,6 @@
         }
 
         .visit-buttons button,
-        .childsgender-buttons button,
-        .Brothersgender-buttons button,
-        .hairmakeup-buttons button,
-        .kimono-buttons button,
-        .preparationphoto-buttons button,
-        .Freshflowerphotography-buttons button,
-        .highschool-buttons button,
         .symptoms button,
         .menu-sections button,
         .irradiations button {
@@ -225,14 +212,6 @@
         }
 
         .visit-buttons button.active,
-        .childsgender-buttons button.active,
-        .Brothersgender-buttons button.active,
-        .hairmakeup-buttons button.active,
-        .kimono-buttons button.active,
-        .preparationphoto-buttons button.active,
-        .Freshflowerphotography-buttons button.active,
-        .highschool-buttons button.active,
-        .symptoms button.active,
         .menu-sections button.active,
         .irradiations button.active {
             background-color: #444;
@@ -923,7 +902,8 @@
         <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
 
         <div class="label">ご住所<span class="required">必須</span></div>
-        <input type="text" id="Yourresidentialaddress" placeholder="ご住所を入力してください" oninput="saveInput('Yourresidentialaddress')">
+        <input type="text" id="Yourresidentialaddress" placeholder="ご住所を入力してください"
+            oninput="saveInput('Yourresidentialaddress')">
 
         <div class="label">電話番号<span class="required">必須</span></div>
         <input type="tel" id="phone" placeholder="電話番号を入力してください" oninput="saveInput('phone')">
@@ -1063,21 +1043,6 @@
         }
 
         // 訪問回数の選択（初回・リピート）
-        function selectBrothersgender(element) {
-            document.querySelectorAll('.Brothersgender-buttons button').forEach(btn => btn.classList.remove('active'));
-            element.classList.add('active');
-            BrothersgenderCount = element.innerText;
-
-            // 選択された訪問回数に対応する時間を取得
-            selectedBrothersgenderTime = BrothersgenderTimes[BrothersgenderCount];
-
-            console.log('選択された訪問回数の時間:', selectedBrothersgenderTime);
-
-            // カレンダーを更新するために取得する日付を渡す
-            fetchAvailability(currentDate);
-        }
-
-        // 訪問回数の選択（初回・リピート）
         function selectVisit(element) {
             document.querySelectorAll('.visit-buttons button').forEach(btn => btn.classList.remove('active'));
             element.classList.add('active');
@@ -1119,21 +1084,21 @@
 
         function submitForm() {
             const formData = {
-    name: document.getElementById('name').value.trim(),
-    phone: document.getElementById('phone').value.trim(),
-    Yourresidentialaddress: document.getElementById('Yourresidentialaddress').value.trim(),
-    Businessaddress: document.getElementById('Businessaddress').value.trim(),
-    visitCount,
-    dates: [
-        document.getElementById('date1').value,
-        document.getElementById('date2').value,
-        document.getElementById('date3').value
-    ],
-    message: document.getElementById('message').value.trim()
-};
+                name: document.getElementById('name').value.trim(),
+                phone: document.getElementById('phone').value.trim(),
+                Yourresidentialaddress: document.getElementById('Yourresidentialaddress').value.trim(),
+                Businessaddress: document.getElementById('Businessaddress').value.trim(),
+                visitCount,
+                dates: [
+                    document.getElementById('date1').value,
+                    document.getElementById('date2').value,
+                    document.getElementById('date3').value
+                ],
+                message: document.getElementById('message').value.trim()
+            };
 
             // フォームデータのチェック
-            if (!formData.name) {〙
+            if (!formData.name) {
                 alert('お名前を入力してください。');
                 return;
             }
